[tool.poetry]
name = "jillw"
version = "0.1.1"
description = "The wrapper for jill.py and manage Julia environments with Python virtualenv"
authors = ["Suzhou-tongyuan <support@tongyuan.cc>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
jill = "^0.11.1"
wisepy2 = "^1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jillw = 'jillw.cli:main'
julia = 'jillw.cli:julia'
