[tool.poetry]
name = "jillw"
version = "0.3.2rc1"
description = "The wrapper for jill.py and manage Julia environments with Python virtualenv"
authors = ["Suzhou-tongyuan <support@tongyuan.cc>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jill = "^0.11.1"
wisepy2 = "^1.3"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jillw = 'jillw.cli:main'
julia = 'jillw.cli:julia'

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
isort = "5.11.5"
black = "22.12.0"
mypy = "^1.9.0"

[tool.isort]
profile = "black"
skip = [".venv", "logs"]


[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [".venv", "logs"]
